# msgpack-rust

rmp/: Cargo.toml
rmp-serde/: Cargo.toml
rmp-serde/src/: decode.rs  encode.rs  lib.rs
rmp/src/: lib.rs
