[package]
name = "rmp-serde"
version = "0.14.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx", rev = "88b0f98667bfcf4dc9445fabbeea8c269754b35b" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "bc160eaaa364448e0831c6fbfc9c77cbf59f09db" }
rmp = { path = "../rmp" }

sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1"
