[package]
name = "rmp-serde"
version = "0.14.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2018"

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx.git", rev = "sgx_1.1.0" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.0" }
rmp = { path = "../rmp" }

std = { package = "sgx_tstd", git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.0" }

[dev-dependencies]
serde_bytes = "0.11.2"
serde_derive = "1.0.99"
