[package]
name = "rmp"
version = "0.8.9"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Pure Rust MessagePack serialization implementation"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp"
readme = "README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2018"

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx.git" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx.git" }
std = { package = "sgx_tstd", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

[dev-dependencies]
#quickcheck = "0.9"
